# prisma-client-rs

./: .gitignore  Cargo.toml  README.md  build.rs  lib.rs  log.txt  prisma.rs  serialization.rs
codegen/: Cargo.toml  dev.db
codegen/src/: lib.rs  prisma.rs.template
codegen/src/templates/: Cargo.toml.template  lib.rs.template  serialization.rs.template
derive/: Cargo.toml
derive/src/: lib.rs
example/: Cargo.toml  build.rs  datamodel.prisma
example/prisma-client/: Cargo.toml
example/prisma-client/src/: lib.rs
example/sqlite/: Cargo.toml  dev.db
example/sqlite/prisma/: schema.prisma
example/sqlite/src/: lib.rs
example/src/: main.rs
examples/: basic.rs
src/: lib.rs
