[package]
name = "prisma-client"
version = "0.1.0"
authors = ["Seun Lanlege <seunlanlege@gmail.com>"]
edition = "2018"

[workspace]
members = ["codegen", "derive", "example/sqlite"]

[lib]
path = "lib.rs"

[build-dependencies]
prisma-codegen = { path = "./codegen" }

[dependencies]
# serialization
itoa = "0.4.5"
ryu = "1.0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["serde_derive"] }

# prisma dependecies
graphql-parser = { git = "https://github.com/prisma/graphql-parser" }
request-handlers = { git = "https://github.com/prisma/prisma-engines", rev = "211e56e18f115fa4d5d9ac2cf2b205d846a889d7" }
query-connector = { git = "https://github.com/prisma/prisma-engines", rev = "211e56e18f115fa4d5d9ac2cf2b205d846a889d7" }
query-core = { git = "https://github.com/prisma/prisma-engines", rev = "211e56e18f115fa4d5d9ac2cf2b205d846a889d7" }
prisma-models = { git = "https://github.com/prisma/prisma-engines", rev = "211e56e18f115fa4d5d9ac2cf2b205d846a889d7" }
datamodel = { git = "https://github.com/prisma/prisma-engines", rev = "211e56e18f115fa4d5d9ac2cf2b205d846a889d7" }

# others
prisma-derive = { path = "./derive" }
derive_more = "0.99"
chrono = "0.4"
log = "0.4"
Inflector = "0.11"
futures = "0.3"
juniper = { git = "https://github.com/graphql-rust/juniper.git", rev = "c761d91" }
