[package]
name = "prisma-codegen"
version = "0.1.0"
authors = ["Seun <seunlanlege@gmail.com>"]
edition = "2018"

[dependencies]
query-core = { git = "https://github.com/prisma/prisma-engines", rev = "211e56e18f115fa4d5d9ac2cf2b205d846a889d7" }
request-handlers = { git = "https://github.com/prisma/prisma-engines", rev = "211e56e18f115fa4d5d9ac2cf2b205d846a889d7" }
datamodel-connector = { git = "https://github.com/prisma/prisma-engines", rev = "211e56e18f115fa4d5d9ac2cf2b205d846a889d7" }
prisma-models = { git = "https://github.com/prisma/prisma-engines", rev = "211e56e18f115fa4d5d9ac2cf2b205d846a889d7" }
datamodel = { git = "https://github.com/prisma/prisma-engines", rev = "211e56e18f115fa4d5d9ac2cf2b205d846a889d7" }

Inflector = "0.11"
tinytemplate = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
graphql-parser = { git = "https://github.com/prisma/graphql-parser" }
tokio = { version = "1", features = ["full"] }
