[package]
name = "prisma-codegen"
version = "0.1.0"
authors = ["Seun <seunlanlege@gmail.com>"]
edition = "2018"

[dependencies]
query-core = { git = "https://github.com/prisma/prisma-engines", rev = "c3eecc84ac8d11972b9167175f8c4038487ba3f6" }
request-handlers = { git = "https://github.com/prisma/prisma-engines", rev = "c3eecc84ac8d11972b9167175f8c4038487ba3f6" }
datamodel-connector = { git = "https://github.com/prisma/prisma-engines", rev = "c3eecc84ac8d11972b9167175f8c4038487ba3f6" }
prisma-models = { git = "https://github.com/prisma/prisma-engines", rev = "c3eecc84ac8d11972b9167175f8c4038487ba3f6" }
datamodel = { git = "https://github.com/prisma/prisma-engines", rev = "c3eecc84ac8d11972b9167175f8c4038487ba3f6" }

Inflector = "0.11"
tinytemplate = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
graphql-parser = { git = "https://github.com/prisma/graphql-parser" }
tokio = { version = "1", features = ["full"] }
