[package]
name = "example"
version = "0.1.0"
authors = ["Seun <seunlanlege@gmail.com>"]
edition = "2018"

[build-dependencies]
prisma-codegen = { path = "../codegen" }

[dependencies]
prisma-derive = { path = "../derive" }
prisma-client = { path = "./prisma-client" }
serde = { version = "1.0.106", features = ["serde_derive"] }
tokio = { version = "0.2.17", features = ["full"] }